--- a/Shop.MAUI/Shop.MAUI.csproj
+++ b/Shop.MAUI/Shop.MAUI.csproj
@@ -79,6 +79,9 @@
 	  <MauiXaml Update="Views\AddProductView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\EditProductView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\InventoryView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
