--- a/Shop.MAUI/Shop.MAUI.csproj
+++ b/Shop.MAUI/Shop.MAUI.csproj
@@ -93,6 +93,9 @@
 	  <MauiXaml Update="Views\ConfigurationView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ImportView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\ProductView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
